--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <hr>
         <nav class="navigation">
             <div class="icon-bg">
-                <img class="menu-icon" src="./assets/home.png" alt="Home">
+                <img class="menu-icon small-icon" src="./assets/home.svg" alt="Home">
                 <a class="menu-link" href="#">Home</a>
             </div>
             <div class="icon-bg">
-                <img class="menu-icon" src="./assets/calendar.png" alt="Calendar">
+                <img class="menu-icon  small-icon" src="./assets/calendar.svg" alt="Calendar">
                 <a class="menu-link" href="#">Calendar</a>
             </div>
             <div class="icon-bg">
-                <img class="menu-icon" src="./assets/boxes.png" alt="FE">
+                <img class="menu-icon  small-icon" src="./assets/boxes.svg" alt="FE">
                 <a class="menu-link" href="#">FE</a>
             </div>
             <div class="icon-bg">
-                <img class="menu-icon" src="./assets/controler.png" alt="Games">
+                <img class="menu-icon" src="./assets/controler.svg" alt="Games">
                 <a class="menu-link" href="#">Games</a>
             </div>
          </nav>  
@@ -35,5 +35,8 @@
    <main>
 
    </main>
+   <footer>
+    
+   </footer>
 </body>
 </html>
