--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <img class="logo" src="./assets/logo.svg" alt="Bit-logo">
         <hr>
         <nav class="navigation">
-            <div class="icon-bg">
-                <img class="menu-icon small-icon" src="./assets/home.svg" alt="Home">
+            <div class="icon-bg active">
+                <img class="menu-icon active2" src="./assets/home.svg" alt="Home">
                 <a class="menu-link" href="#">Home</a>
             </div>
             <div class="icon-bg">
-                <img class="menu-icon  small-icon" src="./assets/calendar.svg" alt="Calendar">
+                <img class="menu-icon " src="./assets/calendar.svg" alt="Calendar">
                 <a class="menu-link" href="#">Calendar</a>
             </div>
             <div class="icon-bg">
-                <img class="menu-icon  small-icon" src="./assets/boxes.svg" alt="FE">
+                <img class="menu-icon" src="./assets/boxes.svg" alt="FE">
                 <a class="menu-link" href="#">FE</a>
             </div>
             <div class="icon-bg">
@@ -36,7 +36,7 @@
 
    </main>
    <footer>
-    
+
    </footer>
 </body>
 </html>
