--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/layout.css">
     <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./styles/body.css">
     <title>Document</title>
 </head>
 <body>
@@ -32,8 +33,19 @@
          </nav>  
         </header>
     
-   <main>
-
+   <main class="mainwidth">
+        <div class="topblock">
+            <div class="halfblock">
+                <hp>Good morning<br> Jevgenij</hp>
+            </div>
+            <div class="halfblock whitehalfblock">
+                <p>10:25</p>
+                <p>Pirmadienis, Sausio 3, 2021</p>
+            </div>
+        </div>
+        <div >
+            <img class="mainimg" src=".//assets/workplace-results-professional-report-accounting-during 1.png" alt="workplace">
+        </div>
    </main>
    <footer>
 
